# torchSCF

./: LICENSE  README.md  chemical.py  environment.yml  orbitals.py  pyproject.toml  test_orbitals.py  xt.sh
.github/workflows/: build_test.yaml
tests/: test_SO.py  test_heh.py  test_orbitals.py
tests/goldens/: h2.xyz
torchSCF/: chemical.py  h2.py  integrals.py  linalg.py  molecule.py  observables.py  orbitals.py  parsers.py  ptable.py  scf.py
torchSCF/config/: so_rhf_heh.yaml
