[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "torchSCF"
version = "0.0.1"
description = "PyTorch-based Quantum Chemistry Calculations"

authors = [
    {name = "David Juergens", email = "davidcj@stanford.edu"}
]

requires-python = ">=3.13"
dependencies = [
    "torch>=2.6.0",
    "jupyter",
    "numpy",
    "pandas",
    "matplotlib",
    "hydra-core",
    "ruff",
    "pytest"
]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu118", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[tool.ruff.lint]
ignore = [
  "F841", # ignore unused variable warnings
  "E741" # irgnore ambiguous variable name warnings
] 